# monasca-events-api

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  README.md  README.rst  api_func_test.py  lower-constraints.txt  policy-sample.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-guide/source/: conf.py  index.rst
api-ref/source/: conf.py  events.inc  http_codes.yaml  index.rst  parameters.yaml
config-generator/: README.md  README.rst  config.conf  monasca-events-api.conf  policy.conf
demo/: demo.py  post_webhook.py  webserver.sh
demo/files/: transform_definition.yaml
demo/files/server/: data.txt  events.php  index.html
devstack/: Vagrantfile  plugin.sh  post_test_hook.sh  settings
devstack/files/debs/: monasca-events-api
devstack/files/elasticsearch/: elasticsearch.yml
devstack/files/kafka/: kafka-server-start.sh  log4j.properties  server.properties
devstack/files/kibana/: kibana.yml
devstack/files/monasca-events-persister/: events-persister-logging.conf
devstack/lib/: elasticsearch.sh  events-agent.sh  events-api.sh  events-persister.sh  kafka.sh  kibana.sh  monasca-ui.sh  utils.sh  zookeeper.sh
doc/source/: conf.py  index.rst
doc/source/_static/: events-api.conf.sample
doc/source/cli/: index.rst
doc/source/code/: modules.rst  monasca_events_api.conf.rst  monasca_events_api.rst
doc/source/configuration/: index.rst  sample.rst
doc/source/contributor/: code.rst  index.rst
etc/: events_api.conf  events_api.ini
etc/monasca/: events-api-logging.conf  events-api-paste.ini  events-api-uwsgi.ini
func_test/: api_func_test.py
monasca/api/: monasca_events_api_v2.py
monasca_events_api/: config.py  policy.py  version.py
monasca_events_api/api/: events_api_v2.py  monasca_events_api_v2.py  monasca_transforms_api_v2.py  server.py  stream_definitions_api_v2.py  transforms_api_v2.py  versions_api.py
monasca_events_api/app/: api.py  wsgi.py
monasca_events_api/app/common/: events_publisher.py  helpers.py
monasca_events_api/app/controller/: healthchecks.py  versions.py
monasca_events_api/app/core/: error_handlers.py  model.py  request.py  request_contex.py  validation.py
monasca_events_api/app/healthcheck/: kafka_check.py
monasca_events_api/app/model/: envelope.py
monasca_events_api/common/: kafka_conn.py  resource_api.py
monasca_events_api/common/messaging/: exceptions.py  fake_publisher.py  kafka_publisher.py  rabbitmq_publisher.py
monasca_events_api/common/repositories/: streams_repository.py
monasca_events_api/conf/: __init__.py  events_publisher.py
monasca_events_api/middleware/: context.py  inspector.py  keystone_context_filter.py  validation_middleware.py
monasca_events_api/openstack/common/: eventlet_backdoor.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  service.py  strutils.py  systemd.py  threadgroup.py
monasca_events_api/policies/: __init__.py  admin.py  agent.py
monasca_events_api/tests/: test_events.py  test_stream_definitions.py  test_transforms.py
monasca_events_api/tests/unit/: base.py  test_body_validation.py  test_body_valodiation.py  test_events_v1.py  test_healthchecks.py  test_policy.py  test_request.py  test_validation_middleware.py  test_versions.py
monasca_events_api/v2/: __init__.py  events.py  stream_definitions.py  transforms.py  versions.py
monasca_events_api/v2/common/: helpers.py  resource.py
monasca_events_api/v2/reference/: __init__.py  events.py  helpers.py  resource.py  stream_definitions.py  transforms.py
releasenotes/notes/: add_policies-24ddd2a505f3de6c.yaml  clean_repo-13f2c84c9054a7db.yaml  drop-py-2-7-22f6ed725217ced1.yaml  spec_documentation-5cc534fcd1a293da.yaml
releasenotes/source/: conf.py  index.rst
tools/: bashate.sh
(+22 files in other folders)
