[metadata]
name = monasca-events-api

summary = OpenStack Events Monitoring Service
description-file =
    README.md
home-page = https://launchpad.net/monasca
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    monasca_events_api

data_files =
    /etc/monasca =
        etc/events_api.conf
        etc/events_api.ini

[entry_points]
console_scripts =
    monasca-events-api = monasca_events_api.api.server:launch

[pbr]
warnerrors = True
