[metadata]
name = monasca-events-api
summary = Monasca API for events
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://github.com/openstack/monasca-events-api
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    monasca_events_api

data_files =
    /etc/monasca =
        etc/monasca/events-api-paste.ini
        etc/monasca/events-api-logging.conf

[entry_points]

oslo.config.opts =
    events.api = monasca_events_api.conf:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[build_apiguide]
all_files = 1
build-dir = api-guide/build
source-dir = api-guide/source

[build_apiref]
all_files = 1
build-dir = api-ref/build
source-dir = api-ref/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
warnerrors = True
