[metadata]
name = monasca-events-api
summary = Monasca API for events
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://github.com/openstack/monasca-events-api
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    monasca_events_api

data_files =
    /etc/monasca =
        etc/monasca/events-api-paste.ini
        etc/monasca/events-api-logging.conf

[entry_points]

oslo.config.opts =
    events.api = monasca_events_api.conf:list_opts

oslo.policy.policies =
    events.api = monasca_events_api.policies:list_rules

wsgi_scripts =
    monasca-events-api-wsgi = monasca_events_api.app.wsgi:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[build_apiref]
all_files = 1
build-dir = api-ref/build
source-dir = api-ref/source

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
autodoc_exclude_modules =
  monasca_events_api.app.wsgi*
  monasca_events_api.tests.*
api_doc_dir = contributor/api
